crates/duckpond/tests/snapshots/render_spec__render_multi_requirement.snap
---
source: crates/duckpond/tests/render_spec.rs
expression: "roundtrip(\"multi_requirement.md\")"
---
# Authentication

Allows users to sign in with email and password, manages their
sessions, and provides logout.

## Requirement: Email-password login

The system SHALL allow a registered user to authenticate using their
email address and password.

> test: code

### Scenario: Valid credentials

- **WHEN** the user submits correct credentials
- **THEN** the system issues a session token

### Scenario: Invalid password

- **WHEN** the user submits an incorrect password
- **THEN** the system rejects the login with a generic error

## Requirement: Session expiration

The system SHALL expire idle sessions after 30 minutes.

> test: code

### Scenario: Idle timeout

- **GIVEN** an authenticated user
- **WHEN** 30 minutes pass with no requests
- **THEN** the next request returns 401

## Requirement: Logout

The system SHALL allow users to explicitly invalidate their session.

> test: code

### Scenario: Explicit logout

- **WHEN** the user submits a logout request
- **THEN** the session token is invalidated
- **AND** future requests with that token are rejected
